<resources>
    <string name="app_name">Epitrack</string>
    <string name="sign_in_activity_title">Health Worker Sign in</string>
    <string name="temp_bp_activity_title">Vital Signs</string>
    <string name="symptom_activity_title">Patient Symptoms</string>
    <string name="patient_details_title">Patient Details</string>
    <string name="diagnosis_title">Health Worker Diagnosis</string>
    <string name="hw_diagnosis_title">Health Worker Diagnosis</string>
    <string name="confirm_activity_title">Confirm Details</string>
    <string name="welcome_message">Welcome!</string>

    <string name="text_first_name">First Name: </string>
    <string name="text_dob">DOB: </string>
    <string name="text_sex">Sex: </string>
    <string name="text_location">Location: </string>
    <string name="text_temperature">Temperature ("\u2103"): </string>
    <string name="text_blood_pressure">Blood Pressure (mmHg): </string>
    <string name="text_diagnosis">Health Worker Diagnosis: </string>
    <string name="text_comment">Further Comments: </string>
    <string name="text_patient_symptoms">Patient Symptoms: </string>
    <string name="date_created_prefix">Date Created: </string>

    <string name="button_add_patient">Add new patient</string>
    <string name="button_male">Male</string>
    <string name="button_female">Female</string>
    <string name="button_undisclosed">Undisclosed</string>
    <string name="button_next">Next</string>
    <string name="button_new_patient">New Patient</string>
    <string name="button_confirm">Confirm Details</string>

    <string name="radio_cholera">Cholera</string>
    <string name="radio_polio">Polio</string>
    <string name="radio_measles">Measles</string>
    <string name="radio_unsure">Unsure</string>

    // symptoms in alphabetical order
    <string name="checkbox_conjunctivitis">Conjunctivitis</string>
    <string name="checkbox_cough">Cough</string>
    <string name="checkbox_dehydration">Dehydration</string>
    <string name="checkbox_Diarrhea">Diarrhea</string>
    <string name="checkbox_dry_mucous_membranes">Dry Mucous Membranes</string>
    <string name="checkbox_fatigue">Fatigue</string>
    <string name="checkbox_fever">Fever</string>
    <string name="checkbox_headache">Headache</string>
    <string name="checkbox_irritability">Irritability</string>
    <string name="checkbox_koplik_spots">Koplik Spots</string>
    <string name="checkbox_leg_cramps">Leg Cramps</string>
    <string name="checkbox_loss_of_skin_elasticity">Loss of Skin Elasticity</string>
    <string name="checkbox_low_blood_pressure">Low Blood Pressure</string>
    <string name="checkbox_nausea">Nausea</string>
    <string name="checkbox_paralysis">Paralyis</string>
    <string name="checkbox_Paresthesia">Paresthesia</string>
    <string name="checkbox_rapid_heart_rate">Rapid Heart Rate</string>
    <string name="checkbox_rash">Rash</string>
    <string name="checkbox_restlessness">Restlessness</string>
    <string name="checkbox_runny_nose">Runny Nose</string>
    <string name="checkbox_sore_throat">Sore Throat</string>
    <string name="checkbox_stomach_pain">Stomach Pain</string>
    <string name="checkbox_thirst">Thirst</string>
    <string name="checkbox_vomiting">Vomiting</string>

    // gps alert stuff
    <string name="text_slash">/</string>
    <string name="gps_alert_title">GPS is Not Enabled</string>
    <string name="gps_alert_message">This application requires GPS to be turned on. Please turn on GPS before continuing.</string>
    <string name="gps_alert_confirm">OK</string>

    // sign in stuff
    <string name="button_sign_in">Sign in</string>
    <string name="user_id_sign_in">User ID:</string>
    <string name="password_sign_in">Password:</string>

    // summary strings
    <string name="summary_text_temperature">Temperature: </string>
    <string name="summary_text_blood_pressure">Blood Pressure: </string>
    <string name="temp_text_name">temp text name</string>
    <string name="temp_text_dob">temp text dob</string>
    <string name="temp_text_sex">temp text sex</string>
    <string name="temp_text_temperature">temp</string>
    <string name="temp_text_bp">temp bp</string>
    <string name="temp_text_diagnosis">temp text diagnosis</string>
    <string name="temp_text_comment">temp text comments</string>
    <string name="temp_text_symptoms">temp text symptoms</string>
    <string name="temp_text_time">temp text date &amp; time</string>
    <string name="text_popup">Added this patient to the local database!</string>
    <string name="button_popup">OK</string>
    <string name="hint_dob">YYYY/MM/DD </string>
    <string name="button_database">View Patients</string>
    <string name="patient_list_title">Patients Saved</string>
    <string name="no_entries">No entries found in the database.</string>
    <string name="temp_date">HH:mm dd/MM/yyyy</string>
    <string name="button_submit_patients">Submit patients to server</string>
    <string name="text_popup_post">Patient data successfully sent to the server!</string>
</resources>