<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiagnosisActivity">

    <Button
        android:id="@+id/button_next2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:onClick="confirmDiagnosis"
        android:text="@string/button_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textDiagnosis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/text_diagnosis"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupDiseases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDiagnosis">

        <RadioButton
            android:id="@+id/radioCholera"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="@string/radio_cholera"
            android:onClick="checkRadio">
        </RadioButton>

        <RadioButton
            android:id="@+id/radioPolio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_polio">
        </RadioButton>

        <RadioButton
            android:id="@+id/radioMeasles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_measles">
        </RadioButton>

        <RadioButton
            android:id="@+id/radioUnsure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_unsure">
        </RadioButton>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>