<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/buttonConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textDateCreatedEntry"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/date_created_prefix"
                    android:textColor="@color/app_turquoise"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textDateCreatedEntry2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/temp_date"
                    android:textSize="22sp" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textNameEntry"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/text_first_name"
                    android:textColor="@color/app_turquoise"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textNameEntry2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/temp_text_name"
                    android:textSize="22sp" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textDOBEntry"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/text_dob"
                    android:textColor="@color/app_turquoise"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textDOBEntry2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/temp_text_dob"
                    android:textSize="22sp" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textSexEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/text_sex"
                    android:textColor="@color/app_turquoise"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textSexEntry2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/temp_text_sex"
                    android:textSize="22sp" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textTemperatureEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/summary_text_temperature"
                    android:textColor="@color/app_turquoise"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textTempEntry2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/temp_text_temperature"
                    android:textSize="22sp" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="3dip">

                <TextView
                    android:id="@+id/textBloodPressureEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/summary_text_blood_pressure"
                    android:textColor="@color/app_turquoise"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textBPEntry2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/temp_text_bp"
                    android:textSize="22sp" />
            </TableRow>

            <View
                android:id="@+id/viewDivider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/PatientSymptomsEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="5dp"
                android:text="@string/text_patient_symptoms"
                android:textColor="@color/app_turquoise"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textSymptomsEntry2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:text="@string/temp_text_symptoms"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textCommentEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="5dp"
                android:text="@string/text_comment"
                android:textColor="@color/app_turquoise"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textCommentEntry2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:text="@string/temp_text_comment"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textDiagnosisEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="5dp"

                android:text="@string/text_diagnosis"
                android:textColor="@color/app_turquoise"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textDiagnosisEntry2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="5dp"
                android:padding="5dp"
                android:text="@string/temp_text_diagnosis"
                android:textSize="22sp" />
        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:onClick="exitEntryView"
        android:text="@string/button_popup"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="@+id/scrollView2" />


</androidx.constraintlayout.widget.ConstraintLayout>