<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientDetailsActivity">

    <TextView
        android:id="@+id/textFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/text_first_name"
        android:textColor="@color/app_turquoise"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textFirstName"
        app:layout_constraintTop_toTopOf="@+id/textFirstName"
        app:layout_constraintVertical_bias="0.521"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="152dp" />

    <TextView
        android:id="@+id/textDOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/text_dob"
        android:textColor="@color/app_turquoise"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextDOB1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFirstName" />


  <!--
    > <EditText
        android:id="@+id/editTextDOB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textDOB"
        app:layout_constraintEnd_toEndOf="@+id/editTextFirstName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextFirstName"
        app:layout_constraintTop_toTopOf="@+id/textDOB"
        app:layout_constraintVertical_bias="0.478" />

    -->

    <EditText
        android:id="@+id/editTextDOB1"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:ems="5"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textDOB"
        app:layout_constraintStart_toStartOf="@+id/editTextFirstName"
        app:layout_constraintTop_toTopOf="@id/textDOB" />

    <EditText
        android:id="@+id/editTextDOB2"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:ems="5"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextDOB1"
        app:layout_constraintStart_toEndOf="@+id/textSlash2"
        app:layout_constraintTop_toTopOf="@+id/editTextDOB1"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextDOB3"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:ems="5"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextDOB1"
        app:layout_constraintStart_toEndOf="@+id/textSlash3"
        app:layout_constraintTop_toTopOf="@+id/editTextDOB1"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textSlash2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/text_slash"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextDOB1"
        app:layout_constraintEnd_toStartOf="@+id/editTextDOB2"
        app:layout_constraintStart_toEndOf="@+id/editTextDOB1"
        app:layout_constraintTop_toTopOf="@+id/editTextDOB1" />

    <TextView
        android:id="@+id/textSlash3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/text_slash"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextDOB1"
        app:layout_constraintEnd_toStartOf="@+id/editTextDOB3"
        app:layout_constraintStart_toEndOf="@+id/editTextDOB2"
        app:layout_constraintTop_toTopOf="@+id/editTextDOB1" />

    <TextView
        android:id="@+id/textSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/text_sex"
        android:textColor="@color/app_turquoise"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDOB" />

    <Button
        android:id="@+id/buttonMale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:backgroundTint="#47B3BF"
        android:drawableRight="@drawable/male_icon"
        android:onClick="setMale"
        android:text="@string/button_male"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextFirstName"
        app:layout_constraintStart_toEndOf="@+id/textFirstName"
        app:layout_constraintTop_toTopOf="@+id/textSex" />

    <Button
        android:id="@+id/buttonFemale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/teal_700"
        android:backgroundTint="#47B3BF"
        android:drawableRight="@drawable/female_icon"
        android:onClick="setFemale"
        android:text="@string/button_female"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/buttonMale"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonMale"
        app:layout_constraintTop_toBottomOf="@+id/buttonMale" />

    <Button
        android:id="@+id/buttonUndisclosed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/teal_700"
        android:backgroundTint="#47B3BF"
        android:drawableRight="@drawable/undisclosed_icon"
        android:onClick="setUndisclosed"
        android:text="@string/button_undisclosed"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/buttonFemale"
        app:layout_constraintStart_toStartOf="@+id/buttonFemale"
        app:layout_constraintTop_toBottomOf="@+id/buttonFemale" />

    <TextView
        android:id="@+id/textLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="176dp"
        android:text="@string/text_location"
        android:textColor="#47B3BF"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSex" />

    <EditText
        android:id="@+id/edit_text_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textLocation"
        app:layout_constraintEnd_toEndOf="@+id/buttonUndisclosed"
        app:layout_constraintStart_toStartOf="@+id/buttonUndisclosed"
        app:layout_constraintTop_toTopOf="@+id/textLocation"
        app:layout_constraintVertical_bias="0.565" />

    <Button
        android:id="@+id/buttonNext2"
        android:layout_width="119dp"
        android:layout_height="61dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#47B3BF"
        android:onClick="confirmPatientDetails"
        android:text="@string/button_next"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
